--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-with-firebase-auth": "^1.1.0"
+    "react-with-firebase-auth": "^1.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
